Fix: Unable to remove colors from the color palette on Safari.

--- a/packages/components/src/palette-edit/style.scss
+++ b/packages/components/src/palette-edit/style.scss
@@ -7,3 +7,7 @@
 		width: 100%;
 	}
 }
+
+.components-palette-edit__remove-button {
+	z-index: z-index(".components-palette-edit__remove-button");
+}
